// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getParametersFromToolSchema (via mapTamboToolToContextTool) Direct schema (shorthand for inputSchema) should accept JSON Schema object directly 1`] = `
[
  {
    "description": "",
    "isRequired": true,
    "name": "input",
    "schema": {
      "properties": {
        "age": {
          "type": "number",
        },
        "name": {
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "object",
  },
]
`;

exports[`getParametersFromToolSchema (via mapTamboToolToContextTool) Direct schema (shorthand for inputSchema) should accept Valibot object schema directly 1`] = `
[
  {
    "description": "",
    "isRequired": true,
    "name": "input",
    "schema": {
      "async": false,
      "entries": {
        "age": {
          "async": false,
          "expects": "number",
          "kind": "schema",
          "message": undefined,
          "reference": [Function],
          "type": "number",
          "~run": [Function],
          "~standard": {
            "validate": [Function],
            "vendor": "valibot",
            "version": 1,
          },
        },
        "name": {
          "async": false,
          "expects": "string",
          "kind": "schema",
          "message": undefined,
          "reference": [Function],
          "type": "string",
          "~run": [Function],
          "~standard": {
            "validate": [Function],
            "vendor": "valibot",
            "version": 1,
          },
        },
      },
      "expects": "Object",
      "kind": "schema",
      "message": undefined,
      "reference": [Function],
      "type": "object",
      "~run": [Function],
      "~standard": {
        "validate": [Function],
        "vendor": "valibot",
        "version": 1,
      },
    },
    "type": "object",
  },
]
`;

exports[`getParametersFromToolSchema (via mapTamboToolToContextTool) Direct schema (shorthand for inputSchema) should accept Zod 3 object schema directly 1`] = `
[
  {
    "description": "",
    "isRequired": true,
    "name": "input",
    "schema": {
      "$schema": "http://json-schema.org/draft-07/schema#",
      "additionalProperties": false,
      "properties": {
        "age": {
          "type": "number",
        },
        "name": {
          "type": "string",
        },
      },
      "required": [
        "name",
        "age",
      ],
      "type": "object",
    },
    "type": "object",
  },
]
`;

exports[`getParametersFromToolSchema (via mapTamboToolToContextTool) Direct schema (shorthand for inputSchema) should accept Zod 4 object schema directly 1`] = `
[
  {
    "description": "",
    "isRequired": true,
    "name": "input",
    "schema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "additionalProperties": false,
      "properties": {
        "age": {
          "type": "number",
        },
        "name": {
          "type": "string",
        },
      },
      "required": [
        "name",
        "age",
      ],
      "type": "object",
    },
    "type": "object",
  },
]
`;

exports[`getParametersFromToolSchema (via mapTamboToolToContextTool) New inputSchema interface (object schemas) JSON Schema object schemas should return single input param with object schema 1`] = `
[
  {
    "description": "User data",
    "isRequired": true,
    "name": "input",
    "schema": {
      "description": "User data",
      "properties": {
        "age": {
          "type": "number",
        },
        "name": {
          "type": "string",
        },
      },
      "required": [
        "name",
      ],
      "type": "object",
    },
    "type": "object",
  },
]
`;

exports[`getParametersFromToolSchema (via mapTamboToolToContextTool) New inputSchema interface (object schemas) Valibot object schemas should handle complex nested objects 1`] = `
[
  {
    "description": "",
    "isRequired": true,
    "name": "input",
    "schema": {
      "async": false,
      "entries": {
        "color": {
          "async": false,
          "expects": "("red" | "green" | "blue")",
          "kind": "schema",
          "message": undefined,
          "options": [
            "red",
            "green",
            "blue",
          ],
          "reference": [Function],
          "type": "picklist",
          "~run": [Function],
          "~standard": {
            "validate": [Function],
            "vendor": "valibot",
            "version": 1,
          },
        },
        "point": {
          "async": false,
          "entries": {
            "x": {
              "async": false,
              "expects": "number",
              "kind": "schema",
              "message": undefined,
              "reference": [Function],
              "type": "number",
              "~run": [Function],
              "~standard": {
                "validate": [Function],
                "vendor": "valibot",
                "version": 1,
              },
            },
            "y": {
              "async": false,
              "expects": "number",
              "kind": "schema",
              "message": undefined,
              "reference": [Function],
              "type": "number",
              "~run": [Function],
              "~standard": {
                "validate": [Function],
                "vendor": "valibot",
                "version": 1,
              },
            },
          },
          "expects": "Object",
          "kind": "schema",
          "message": undefined,
          "pipe": [
            {
              "async": false,
              "entries": {
                "x": {
                  "async": false,
                  "expects": "number",
                  "kind": "schema",
                  "message": undefined,
                  "reference": [Function],
                  "type": "number",
                  "~run": [Function],
                  "~standard": {
                    "validate": [Function],
                    "vendor": "valibot",
                    "version": 1,
                  },
                },
                "y": {
                  "async": false,
                  "expects": "number",
                  "kind": "schema",
                  "message": undefined,
                  "reference": [Function],
                  "type": "number",
                  "~run": [Function],
                  "~standard": {
                    "validate": [Function],
                    "vendor": "valibot",
                    "version": 1,
                  },
                },
              },
              "expects": "Object",
              "kind": "schema",
              "message": undefined,
              "reference": [Function],
              "type": "object",
              "~run": [Function],
              "~standard": {
                "validate": [Function],
                "vendor": "valibot",
                "version": 1,
              },
            },
            {
              "description": "Point",
              "kind": "metadata",
              "reference": [Function],
              "type": "description",
            },
          ],
          "reference": [Function],
          "type": "object",
          "~run": [Function],
          "~standard": {
            "validate": [Function],
            "vendor": "valibot",
            "version": 1,
          },
        },
        "tags": {
          "async": false,
          "expects": "Array",
          "item": {
            "async": false,
            "expects": "string",
            "kind": "schema",
            "message": undefined,
            "reference": [Function],
            "type": "string",
            "~run": [Function],
            "~standard": {
              "validate": [Function],
              "vendor": "valibot",
              "version": 1,
            },
          },
          "kind": "schema",
          "message": undefined,
          "reference": [Function],
          "type": "array",
          "~run": [Function],
          "~standard": {
            "validate": [Function],
            "vendor": "valibot",
            "version": 1,
          },
        },
      },
      "expects": "Object",
      "kind": "schema",
      "message": undefined,
      "reference": [Function],
      "type": "object",
      "~run": [Function],
      "~standard": {
        "validate": [Function],
        "vendor": "valibot",
        "version": 1,
      },
    },
    "type": "object",
  },
]
`;

exports[`getParametersFromToolSchema (via mapTamboToolToContextTool) New inputSchema interface (object schemas) Valibot object schemas should return single input param with object schema 1`] = `
[
  {
    "description": "",
    "isRequired": true,
    "name": "input",
    "schema": {
      "async": false,
      "entries": {
        "age": {
          "async": false,
          "expects": "number",
          "kind": "schema",
          "message": undefined,
          "reference": [Function],
          "type": "number",
          "~run": [Function],
          "~standard": {
            "validate": [Function],
            "vendor": "valibot",
            "version": 1,
          },
        },
        "name": {
          "async": false,
          "expects": "string",
          "kind": "schema",
          "message": undefined,
          "reference": [Function],
          "type": "string",
          "~run": [Function],
          "~standard": {
            "validate": [Function],
            "vendor": "valibot",
            "version": 1,
          },
        },
      },
      "expects": "Object",
      "kind": "schema",
      "message": undefined,
      "reference": [Function],
      "type": "object",
      "~run": [Function],
      "~standard": {
        "validate": [Function],
        "vendor": "valibot",
        "version": 1,
      },
    },
    "type": "object",
  },
]
`;

exports[`getParametersFromToolSchema (via mapTamboToolToContextTool) New inputSchema interface (object schemas) Zod 3 object schemas should return single input param with object schema 1`] = `
[
  {
    "description": "",
    "isRequired": true,
    "name": "input",
    "schema": {
      "$schema": "http://json-schema.org/draft-07/schema#",
      "additionalProperties": false,
      "properties": {
        "age": {
          "type": "number",
        },
        "name": {
          "type": "string",
        },
      },
      "required": [
        "name",
        "age",
      ],
      "type": "object",
    },
    "type": "object",
  },
]
`;

exports[`getParametersFromToolSchema (via mapTamboToolToContextTool) New inputSchema interface (object schemas) Zod 4 object schemas should handle complex nested objects 1`] = `
[
  {
    "description": "",
    "isRequired": true,
    "name": "input",
    "schema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "additionalProperties": false,
      "properties": {
        "color": {
          "enum": [
            "red",
            "green",
            "blue",
          ],
          "type": "string",
        },
        "point": {
          "additionalProperties": false,
          "properties": {
            "x": {
              "type": "number",
            },
            "y": {
              "type": "number",
            },
          },
          "required": [
            "x",
            "y",
          ],
          "type": "object",
        },
        "tags": {
          "items": {
            "type": "string",
          },
          "type": "array",
        },
      },
      "required": [
        "point",
        "tags",
        "color",
      ],
      "type": "object",
    },
    "type": "object",
  },
]
`;

exports[`getParametersFromToolSchema (via mapTamboToolToContextTool) New inputSchema interface (object schemas) Zod 4 object schemas should return single input param with object schema 1`] = `
[
  {
    "description": "",
    "isRequired": true,
    "name": "input",
    "schema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "additionalProperties": false,
      "properties": {
        "age": {
          "description": "User age",
          "type": "number",
        },
        "name": {
          "description": "User name",
          "type": "string",
        },
      },
      "required": [
        "name",
        "age",
      ],
      "type": "object",
    },
    "type": "object",
  },
]
`;
